# rp6502-sdk

./: CMakeLists.txt  README.md  rp6502.cfg  rp6502.cmake  rp6502.py  run.py
include/: clock.h  rp6502.h  rp6502.inc
src/: clock.c  clock_getres.c  clock_gettime.c  clock_gettimespec.c  clock_gettimezone.c  clock_settime.c  close.c  codepage.c  crt0.s  getres.c  gettime.c  gettimespec.c  gettimezone.c  initenv.s  irq.s  lrand.c  lseek.c  mainargs.s  open.c  oserrlist.s  oserror.s  phi2.c  randomize.c  read.c  read_xram.c  read_xstack.c  ria.s  rp6502.c  rtc.c  stdin_opt.c  sysremove.c  sysrename.c  write.c  write_xram.c  write_xstack.c  xreg.s
